feat(calculate-article-ratings): Enable Ratings calcuration (#42)
